// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpenseSummary  with 1 expense 1`] = `
<h3>
  Viewing 
  1
   expense
   
  totalling 
  $150.00
</h3>
`;

exports[`should correctly render ExpenseSummary  with multiple expenses 1`] = `
<h3>
  Viewing 
  5
   expense
  s
   
  totalling 
  $2,000.00
</h3>
`;
